--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
@@ -52,7 +52,10 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
+    "rc-tooltip": "^6.4.0",
     "react": "19.2.0",
+    "react-big-calendar": "^1.19.4",
+    "react-calendar": "^6.0.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
